added new product link

--- a/GitDemo/index.html
+++ b/GitDemo/index.html
@@ -3,6 +3,8 @@
     <body>
         <main>
             Welcome 
+
+            <a href="newproduct.html"> click here to view details about the product</a>
         </main>
     </body>
 </html>
