--- a/GitDemo/index.html
+++ b/GitDemo/index.html
@@ -6,6 +6,9 @@
 
             <a href="newproduct.html"> click here to view details about the product</a>
         </main>
+        <aside>
+            <h2>Test</h2>
+        </aside>
     </body>
 </html>
     
