--- a/GitDemo/index.html
+++ b/GitDemo/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <main>
-            Welcome 
+            Welcome to the webite
         </main>
         <aside>
             <h2>Test</h2>
