Adding navigation bar

--- a/Assignment/Assignment.html
+++ b/Assignment/Assignment.html
@@ -1,2 +1,15 @@
-<!DOCTYPE html>
-<html lang="eng">
+<!doctype html>
+<html lang="en">
+    <head>
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="Assessment.css"/>
+        <link rel="stylesheet" href=".css" media="screen and (max-width:1000px)" />
+        <link rel="stylesheet" href=".css" media="screen and (min-width:1000px)" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    </head>
+    <body>
+        <header>Home Page</header>
+        <main>
+            <h1>Home Page</h1>  <h2>Portfolio</h2>  <h3>Contact</h3>    <h4>CV</h4> <h5>Site Report</h5>
+        </main>
+    </body>
