added header and used css

--- a/Assignment/Assignment.html
+++ b/Assignment/Assignment.html
@@ -10,6 +10,6 @@
     <body>
         <header>Home Page</header>
         <main>
-            <h1>Home Page</h1>  <h2>Portfolio</h2>  <h3>Contact</h3>    <h4>CV</h4> <h5>Site Report</h5>
+            <p1>Home Page</p1>  <p2>Portfolio</p2>  <p3>Contact</p3>    <p4>CV</p4> <p5>Site Report</p5>
         </main>
     </body>
