--- a/Assignment/Assignment.html
+++ b/Assignment/Assignment.html
@@ -9,7 +9,14 @@
     </head>
     <body>
         <header>Home Page</header>
-        <main>
-            <p1>Home Page</p1>  <p2>Portfolio</p2>  <p3>Contact</p3>    <p4>CV</p4> <p5>Site Report</p5>
-        </main>
+        <nav>
+            <ul>
+                <li><a href="#">Home Page</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">CV</a></li>
+                <li><a href="#">Site Report</a></li>
+                
+            </ul>
+        </nav>
     </body>
