--- a/Assignment.html
+++ b/Assignment.html
@@ -9,7 +9,14 @@
     </head>
     <body>
         <header>Home Page</header>
-        <main>
-            <h1>Home Page</h1>  <h2>Portfolio</h2>  <h3>Contact</h3>    <h4>CV</h4> <h5>Site Report</h5>
-        </main>
+        <nav>
+            <ul>
+                <li><a href="#">Home Page</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">CV</a></li>
+                <li><a href="#">Site Report</a></li>
+                
+            </ul>
+        </nav>
     </body>
