--- a/Assignment/Assignment.html
+++ b/Assignment/Assignment.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <title>Portfolio</title>
-        <link rel="stylesheet" href="Assessment.css"/>
-        <link rel="stylesheet" href=".css" media="screen and (max-width:1000px)" />
-        <link rel="stylesheet" href=".css" media="screen and (min-width:1000px)" />
+        <link rel="stylesheet" href="Assessment.css" media="screen and (min-width:1000px)" />
+        <link rel="stylesheet" href="Mobilephone.css" media="screen and (max-width:1000px)" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
