--- a/Assignment/Home Page.html
+++ b/Assignment/Home Page.html
@@ -11,11 +11,14 @@
         <nav>
             <ul>
                 <li><a href="Home Page.html">Home Page</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="CV.html">CV</a></li>
-                <li><a href="Site Report.html">Site Report</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">CV</a></li>
+                <li><a href="#">Site Report</a></li>
                 
             </ul>
         </nav>
+        <main>
+            Hello, my name is Paulo Alexandre Cardoso Araujo Figueiredo and this is my website. Here I will add content in my upcoming years at Northampton University
+        </main>
     </body>
