--- a/Assignment/Assignment.html
+++ b/Assignment/Assignment.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Portfolio</title>
+        <title>Home Page</title>
         <link rel="stylesheet" href="Assessment.css" media="screen and (min-width:1000px)" />
         <link rel="stylesheet" href="Mobilephone.css" media="screen and (max-width:1000px)" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -10,6 +10,7 @@
         <header>Home Page</header>
         <nav>
             <ul>
+                <li><a href="Home Page.html">Home Page</a></li>
                 <li><a href="Home Page.html">Home Page</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
                 <li><a href="Contact.html">Contact</a></li>
