--- a/Assignment/Contact.html
+++ b/Assignment/Contact.html
@@ -18,5 +18,5 @@
                 
             </ul>
         </nav>
-        <main>frenbui;erbgeiobnvieERBJKERBVUERIWEWUIRbgbvgyurrl</main>
+        <main></main>
     </body>
