Creating Home Page

--- a/Assignment/CV.html
+++ b/Assignment/CV.html
@@ -30,7 +30,7 @@
 </p1>
 
 <h3>Education</h3>
-University: Faculty of Medicine, University of Porto
+<p2>University: Northmhampton University
 Sixth Form: 3 A-Levels
 • B – Maths
 • B – Chemistry
@@ -38,7 +38,9 @@ Sixth Form: 3 A-Levels
 Secondary School: 13 GSCEs
 • 9 A’s
 • 2 B’s
-Work Experience
+</p2>
+
+<h4>Work Experience</h4>
 One week of work experience in:
 • Saint Mary’s Hospital – Infectious and Contagious Diseases and Radiology
 • Royal Brompton Hospital – A&E
