--- a/Assignment/Home Page.html
+++ b/Assignment/Home Page.html
@@ -19,6 +19,11 @@
             </ul>
         </nav>
         <main>
-            Hello, my name is Paulo Alexandre Cardoso Araujo Figueiredo and this is my website. Here I will add content in my upcoming years at Northampton University
+            <h1>Welcome to my Website</h1>
+            <p>Hello, my name is Paulo Alexandre Cardoso Araujo Figueiredo, Im a first year student at Northampton University and this is my fist HTML project.
+                Here I will add content in my upcoming years at the University.
+                This website has a sole objective of being a place where I can store and organise my work on the many subject I will work on in the future.
+            </p> 
+            <img src="NorthamptonUni.jpg">
         </main>
     </body>
