Creating Home Page update

--- a/Assignment/Home Page.html
+++ b/Assignment/Home Page.html
@@ -20,10 +20,11 @@
         </nav>
         <main>
             <h1>Welcome to my Website</h1>
-            <p>Hello, my name is Paulo Alexandre Cardoso Araujo Figueiredo, Im a first year student at Northampton University and this is my fist HTML project.
+            <p>Hello, my name is Paulo Alexandre Cardoso Araujo Figueiredo, Im a first year student at Northampton University
+                 undertaking a software engeneering course and this is my first HTML project.
                 Here I will add content in my upcoming years at the University.
                 This website has a sole objective of being a place where I can store and organise my work on the many subject I will work on in the future.
             </p> 
-            <img src="NorthamptonUni.jpg">
+            <img src="/Web Development/NorthamptonUni.jpg" width="400em" height="300em" class="image">
         </main>
     </body>
