CV page contents

--- a/Assignment/CV.html
+++ b/Assignment/CV.html
@@ -21,7 +21,7 @@
         <main>
             <h1>Paulo Figueiredo</h1>
 
-<h2>Personal Data</h2>
+<h3>Personal Data</h3>
 <p1>Name: Paulo Alexandre Cardoso Araújo Figueiredo
     Date Of Birth: 15th January 1999
     Nationality: Portuguese and English
@@ -40,23 +40,34 @@ Secondary School: 13 GSCEs
 • 2 B’s
 </p2>
 
-<h4>Work Experience</h4>
-One week of work experience in:
+<h3>Work Experience</h3>
+<p3>One week of work experience in:
 • Saint Mary’s Hospital – Infectious and Contagious Diseases and Radiology
 • Royal Brompton Hospital – A&E
 • Bedford Hospital – Ophthalmology and Surgery
 This valuable work experience that I managed to get during my A-Levels reassured me of what I
 really wanted to do in the future, leaving my career options wide open, since I enjoyed all of the
-areas I was involved with.
-Other skills
-Driving License: Since May 2017
-Computer Skills: Microsoft Office Tools and Endnote X9
+areas I was involved with. After this work experience, I applied and entered in Facculty of Medicine
+University of Porto (FMUP). Here I studied 3 years, however after those 3 years I decided to change my path
+to computer science and applied to Northampton University, which I am currently attending.
+</p3>
+
+<h3>Other Skills</h3>
+<p4>Driving License: Since May 2017
+Computer Skills: Microsoft Office Tools and Endnote X9, VSCode, Eclipse
 Languages: Fluent in both Portuguese and English
-Extra-curricular activities
-When I am not pursuing academic excellence, my social life revolves around sports and music.
+</p4>
+
+<h3>Extra-curricular activities</h3>
+<p5>When I am not pursuing academic excellence, my social life revolves around sports and music.
 I love all sports, but I am especially very enthusiastic with football, which I have been practicing since
 I was 6 years old. With regards to music, I see it as something enjoyable and relaxing that helps me
 not only to focus, in the case of classical music, but also to have fun and entertainment, in case of
 pop music.
+</p5>
+
+<aside>
+jrngiorntgiortng
+</aside>
         </main>
     </body>
