--- a/Assignment/CV.html
+++ b/Assignment/CV.html
@@ -55,7 +55,7 @@
                     <br> 
                     <br>This valuable work experience that I managed to get during my A-Levels reassured me of what I
                     really wanted to do in the future, leaving my career options wide open, since I enjoyed all of the
-                    areas I was involved with. After this work experience, I applied and entered in Facculty of Medicine
+                    areas I was involved with. After this work experience, I applied and entered in Faculty of Medicine
                     University of Porto (FMUP). Here I studied 3 years, however after those 3 years I decided to change my path
                     to computer science and applied to Northampton University, which I am currently attending.
                 </p4>
