Portfolio Page config

--- a/Assignment/Portfolio.html
+++ b/Assignment/Portfolio.html
@@ -16,6 +16,20 @@
                 <li><a href="CV.html">CV</a></li>
                 <li><a href="Site Report.html">Site Report</a></li>
                 
+
             </ul>
         </nav>
+        <main>
+            <div class="row">
+                <div class="column">
+                <img src="/Web Development/Placeholder.png" width="400em" height="300em" class="imageportfolio">
+                <img src="/Web Development/Placeholder.png" width="400em" height="300em" class="imageportfolio">
+                </div>
+                <div class="column">
+                <img src="/Web Development/Placeholder.png" width="400em" height="300em" class="imageportfolio">
+                <img src="/Web Development/Placeholder.png" width="400em" height="300em" class="imageportfolio">
+                </div>
+            </div>
+        
+        </main>
     </body>
