changed the class tag

--- a/Assignment/Home Page.html
+++ b/Assignment/Home Page.html
@@ -25,6 +25,6 @@
                 Here I will add content in my upcoming years at the University.
                 This website has a sole objective of being a place where I can store and organise my work on the many subject I will work on in the future.
             </p> 
-            <img src="/Web Development/NorthamptonUni.jpg" width="400em" height="300em" class="image">
+            <img src="/Web Development/NorthamptonUni.jpg" width="400em" height="300em" class="imagehomepage">
         </main>
     </body>
