first attempt at hamburger icon

--- a/Assignment/Contact.html
+++ b/Assignment/Contact.html
@@ -7,7 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
-        <header>Contact</header>
+        <header>Contact
+            <a class="shownav"></a>
+        </header>
         <nav>
             <ul>
                 <li><a href="Home Page.html">Home Page</a></li>
