hamburger icon added on smaller screen&start conta

--- a/Assignment/CV.html
+++ b/Assignment/CV.html
@@ -20,6 +20,11 @@
                 
             </ul>
         </nav>
+        <div class="hamburgercontainer">
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+        </div>
         <main>
             <h1>Paulo Figueiredo</h1>
             <div class="row">
