--- a/Assignment/Contact.html
+++ b/Assignment/Contact.html
@@ -20,5 +20,28 @@
                 
             </ul>
         </nav>
-        <main></main>
+        <div class="hamburgercontainer">
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+        </div>
+        <main>
+                The main forms of contact information you can use to get to me can be found below.
+                <br> Personal Email : Xande.figuei@hotmail.com
+                <br>
+                <br> University Email : Paulo.figueiredo20@my.nothampton.ac.uk  
+                <br>
+                <br> Phone number : 07561456787
+            
+            <br> <form action="http://www.computing.northampton.ac.uk/~tom/formtest.php" method="POST">
+                    <br> First Name <input type="text"  name="First Name" />
+                    <br>
+                    <br>  Last Name <input type="text"  name="Last Name" />
+                    <br>
+                    <br> Email Adress <input type="text"  name="Email Adress" />
+                    <br>
+                    <br> <input type="submit" value="Submit"  name="submit" />
+
+            </form>
+        </main>
     </body>
