--- a/Assignment/Home Page.html
+++ b/Assignment/Home Page.html
@@ -20,6 +20,11 @@
                 
             </ul>
         </nav>
+            <div class="hamburgercontainer">
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+            </div>
         <main>
             <h1>Welcome to my Website</h1>
             <p>Hello, my name is Paulo Alexandre Cardoso Araujo Figueiredo, Im a first year student at Northampton University
@@ -29,4 +34,5 @@
             </p> 
             <img src="/Web Development/NorthamptonUni.jpg" width="400em" height="300em" class="imagehomepage">
         </main>
+        <footer>erglweuiewh;f</footer>
     </body>
