--- a/Assignment/Portfolio.html
+++ b/Assignment/Portfolio.html
@@ -21,6 +21,11 @@
 
             </ul>
         </nav>
+        <div class="hamburgercontainer">
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+        </div>
         <main>
             <div class="row">
                 <div class="column">
