--- a/Assignment/Site Report.html
+++ b/Assignment/Site Report.html
@@ -20,4 +20,9 @@
                 
             </ul>
         </nav>
+        <div class="hamburgercontainer">
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+        </div>
     </body>
