sorted some layout issues, centered the form

--- a/Assignment/Contact.html
+++ b/Assignment/Contact.html
@@ -26,21 +26,19 @@
             <div class="hamburger"></div>
         </div>
         <main>
-                The main forms of contact information you can use to get to me can be found below.
+                <p>The main forms of contact information you can use to get to me can be found below.
+                </p>
                 <br> Personal Email : Xande.figuei@hotmail.com
                 <br>
                 <br> University Email : Paulo.figueiredo20@my.nothampton.ac.uk  
                 <br>
                 <br> Phone number : 07561456787
-            
+            <br>
             <br> <form action="http://www.computing.northampton.ac.uk/~tom/formtest.php" method="POST">
-                    <br> First Name <input type="text"  name="First Name" />
-                    <br>
-                    <br>  Last Name <input type="text"  name="Last Name" />
-                    <br>
-                    <br> Email Adress <input type="text"  name="Email Adress" />
-                    <br>
-                    <br> <input type="submit" value="Submit"  name="submit" />
+                    <label for="firstname">First Name</label> <input type="text"  name="First Name"  id="firstname" />
+                    <label for="lastname">Last Name</label> <input type="text"  name="Last Name"  id="lastname" />
+                    <label for="emailadress">Email Adress</label> <input type="text"  name="Email Adress"  id="emailadress" />
+                    <input type="submit" value="Submit"  name="submit"  class="submit" />
 
             </form>
         </main>
