--- a/Assignment/Home Page.html
+++ b/Assignment/Home Page.html
@@ -34,5 +34,5 @@
             </p> 
             <img src="/Web Development/NorthamptonUni.jpg" width="400em" height="300em" class="imagehomepage">
         </main>
-        <footer>erglweuiewh;f</footer>
+        <footer></footer>
     </body>
