Added custom fonts to the website on all pages

--- a/Assignment/Contact.html
+++ b/Assignment/Contact.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="Assessment.css" media="screen and (min-width:1000px)" />
         <link rel="stylesheet" href="Mobilephone.css" media="screen and (max-width:1000px)" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=PT+Sans&family=Staatliches&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>Contact
@@ -27,12 +29,13 @@
         </div>
         <main>
                 <p>The main forms of contact information you can use to get to me can be found below.
-                </p>
+               <br>
                 <br> Personal Email : Xande.figuei@hotmail.com
                 <br>
                 <br> University Email : Paulo.figueiredo20@my.nothampton.ac.uk  
                 <br>
                 <br> Phone number : 07561456787
+                </p>
             <br>
             <br> <form action="http://www.computing.northampton.ac.uk/~tom/formtest.php" method="POST">
                     <label for="firstname">First Name</label> <input type="text"  name="First Name"  id="firstname" />
