--- a/Assignment/Home Page.html
+++ b/Assignment/Home Page.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="Assessment.css" media="screen and (min-width:1000px)" />
         <link rel="stylesheet" href="Mobilephone.css" media="screen and (max-width:1000px)" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=PT+Sans&family=Staatliches&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>Home Page
@@ -26,7 +28,7 @@
                 <div class="hamburger"></div>
             </div>
         <main>
-            <h1>Welcome to my Website</h1>
+            <h>Welcome to my Website</h>
             <p>Hello, my name is Paulo Alexandre Cardoso Araujo Figueiredo, Im a first year student at Northampton University
                  undertaking a software engeneering course and this is my first HTML project.
                 Here I will add content in my upcoming years at the University.
