--- a/Assignment/Portfolio.html
+++ b/Assignment/Portfolio.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="Assessment.css" media="screen and (min-width:1000px)" />
         <link rel="stylesheet" href="Mobilephone.css" media="screen and (max-width:1000px)" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=PT+Sans&family=Staatliches&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>Portfolio
