--- a/Assignment/Site Report.html
+++ b/Assignment/Site Report.html
@@ -27,4 +27,38 @@
             <div class="hamburger"></div>
             <div class="hamburger"></div>
         </div>
+
+    <main>
+        <h1>Web Development Experience
+        </h1>
+            <p>
+            Throughout the term I came to realise that this topic has a large learning curve, which means that
+            at the beggining it was tough to understand the coding behind html. However as weeks went on and
+            more practice came through, it became easier to use certain code and tags. One specific thing that 
+            has still proven to be a challenge even after having done it a couple of times is building a hamburger 
+            icon. Hopefully having done it one more time, if I need to re-use it in the future I will remember.
+            Now that i've talked about some of the harder aspects, one of the easier bits of the website for me was 
+            making the website mobile user friendly. This is because I knew exactly what I wanted to happen on mobiles 
+            due to my plan before starting. This made work alot easier when coding since I already knew what I had to do.
+            Using CSS has been one of my strong points in this subject, I managed to pick it up very quickly. Organisation 
+            is a very important skill in both HTML and CSS because with the correct organisation, coding with CSS becomes 
+            significatly easier if you use the correct tags.    
+            </p>
+        <h1>Website Design
+        </h1>
+            <p>
+                Before starting to do my website, I had many ideas about how to do it, however I settled on 
+                having the navigation bar horizontally and keeping the title separated from the rest of the page.
+                The page had to have some colour and I didn't like the aspect of dark colours, hence I went for some 
+                lighter abd lively colours with the lightblue and the lightgreen navigation bar. The font being black 
+                was the objective of the website, it made it easy to read, however, for the navigation bar, the 
+                hover animation made me spend some time thinking what the colour of the hover should be. I made my 
+                decision on red because not only does it look nice with the light green, but it has very good contrast 
+                with the light blue background.
+            </p>
+
+            
+
+        </p>
+    </main>
     </body>
