--- a/Assignment/Site Report.html
+++ b/Assignment/Site Report.html
@@ -56,7 +56,8 @@
                 decision on red because not only does it look nice with the light green, but it has very good contrast 
                 with the light blue background.
             </p>
-
+            
+            <img src="/Web Development/AssesmentCSSval.png"  >
             
 
         </p>
