--- a/Assignment/Contact.html
+++ b/Assignment/Contact.html
@@ -37,7 +37,7 @@
                 <br> Phone number : 07561456787
                 </p>
             <br>
-            <br> <form action="http://www.computing.northampton.ac.uk/~tom/formtest.php" method="POST">
+            <br> <form action="malito:paulo.figueiredo20@my.northampton.ac.uk?subject=Contact Form" method="POST">
                     <label for="firstname">First Name</label> <input type="text"  name="First Name"  id="firstname" />
                     <label for="lastname">Last Name</label> <input type="text"  name="Last Name"  id="lastname" />
                     <label for="emailadress">Email Adress</label> <input type="text"  name="Email Adress"  id="emailadress" />
