added mobile phone ccs validation to report

--- a/Assignment/Site Report.html
+++ b/Assignment/Site Report.html
@@ -58,6 +58,7 @@
             </p>
             
             <img src="/Web Development/AssesmentCSSval.png"  >
+            <img src="/Web Development/MobilePhoneCSSval.png"  >
             
 
         </p>
